compiler/test/conformance/valid/stmt_if.tu
// stmt: if / else if / else
fn main() {
  let n = 7
  if n < 0 {
    print("negativo")
  } else if n == 0 {
    print("zero")
  } else {
    print("positivo")
  }
}
